--- a/css/style.css
+++ b/css/style.css
@@ -161,8 +161,16 @@
 
   .Skills {
     box-sizing: border-box;
-    padding: 10px;
+    /* padding-top: 8vh; */
+    /* padding-bottom: 10vh; */
   }
+
+  #soft{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
   .two a {
     text-decoration: none;
@@ -184,44 +192,6 @@
     align-items: flex-end;
     flex-direction: column-reverse;
   }
-
-  /*   .phone{
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    z-index: 1000;
-    
-  }
-  .mail{
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    z-index: 1000;
-    bottom: 0%;
-  }
-  .website{
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    z-index: 1000;
-  
-  }
-  .permis{
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    z-index: 1000;
-  
-  }
-  .Linkedin{
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    z-index: 1000;
-  
-  } */
-
-
 
 
   /* ------------------------------------------------------- */
@@ -479,6 +449,7 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+    height: 100vh;
   }
 
   li {
@@ -528,9 +499,6 @@
     margin-bottom: 30px;
   }
 
-  #skills {
-    width: 27px;
-  }
 
   /* FIN */
 
@@ -568,69 +536,79 @@
 
   /* ------------------------------------------------------ */
 
-  /* CARTE 1 */
-  .flip-card {
-    background-color: transparent;
-    width: 300px;
-    height: 300px;
-    perspective: 1000px;
-    z-index: 10000;
-    margin: auto;
-    padding-top: 5%;
-  }
-
-  .flip-card-inner {
+  .flip-card-3D-wrapper {
+    width: 100vw;
+    height: 100vh;
+    /* max-width: 300px;
+    max-height: 500px; */
     position: relative;
-    width: 100%;
-    height: 100%;
+    -o-perspective: 900px;
+    -webkit-perspective: 900px;
+    -ms-perspective: 900px;
+    perspective: 900px;
+    margin: 0 auto;
+  }
+  #flip-card {
+    width: 100vw;
+    height: 100vh;
     text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding-left: auto;
-    padding-right: auto;
-  }
-
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-    z-index: 10000;
-  }
-
-  .flip-card-front,
-  .flip-card-back {
+    margin: auto;
     position: absolute;
+    -o-transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    -o-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+  }
+  .do-flip {
+    -o-transform: rotateY(-180deg);
+    -webkit-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+  }
+  #flip-card-btn-turn-to-back, #flip-card-btn-turn-to-front {
+    position: absolute;
+    top: 40px;
+    right: 40vw;
+    width: 100px;
+    height: 40px;
+    background: green;
+    cursor: pointer;
+    visibility: hidden;
+    font-weight: 600;
+    font-size: .7em;
+    padding: 0;
+    border: 1px solid green;
+    border-radius: 50px;
+  }
+
+  #flip-card .flip-card-front, #flip-card .flip-card-back{
     width: 100%;
     height: 100%;
+    position: absolute;
+    -o-backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
     backface-visibility: hidden;
-    z-index: 10000;
+    z-index: 2;
   }
-
-  .flip-card-front {
-    background-color: #bbb;
-    color: black;
-    z-index: 10000;
+  #flip-card .flip-card-front {
   }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      .flip-card-back{
-        background-color:#FFC528 ;
-      }
-    }
+  #flip-card .flip-card-back {
+      -o-transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+      -ms-transform: rotateY(180deg);
+      transform: rotateY(180deg);
   }
-  .flip-card-back {
-    background-color: #FFC528 !important; 
-    color: white;
-    transform: rotateY(180deg);
+  #flip-card .flip-card-front p, #flip-card .flip-card-back p {
+    color: grey;
+    display: block;
+    position: absolute;
+    top: 40%;
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-
   }
 
 
@@ -646,6 +624,10 @@
       ". Photoshop Canva Figma ."
       ". Git English . ."
       ". . . . .";
+
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
   }
   
   .HTML { grid-area: HTML; }
@@ -672,59 +654,7 @@
   
   
 
-  /* Carte 2 */
-  .flip-card2 {
-    background-color: transparent;
-    width: 300px;
-    height: 300px;
-    perspective: 1000px;
-    margin: auto;
-    padding-top: 5%;
-  }
-
-  .flip-card-inner2 {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  }
-
-  .flip-card2:hover .flip-card-inner2 {
-    transform: rotateY(180deg);
-  }
-
-  .flip-card-front2,
-  .flip-card-back2 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-
-  .flip-card-front2 {
-    background-color: #bbb;
-    color: black;
-  }
-
-  .flip-card-back2 {
-    background-color: #FFC528;
-    color: white;
-    transform: rotateY(180deg);
-    width: 100%;
-    height: 100%;
-  }
-
-  .flip-card-back2 li {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    margin-top: 4%;
-    text-align: center;
-  }
+  
 
   /* ----------------------------------------------------------- */
   /* Carousel de mort*/
